# ai-2025

./: .gitignore  README.md  pyproject.toml
ai_2025/: a.py  ai_challenge.py  attempt_1.py  common.py  file_analysis.py  other_calls.py  q1.jsonl  q2.jsonl  res.json  setup.py  simple_batch_request.py  zero.py
docs/: pricing.md
